<resources>
    <string name="app_name">SummerSchool</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Online Courses</string>
    <string name="nav_notifications">Offline Courses</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Online Courses</item>
        <item>Offline Courses</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Other string resources also defined in this file… -->
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>


    <string-array name="feedbacktypelist">
        <item>@string/feedbacktype1</item>
        <item>@string/feedbacktype2</item>
        <item>@string/feedbacktype3</item>
        <item>@string/feedbacktype4</item>
    </string-array>


    <!-- Registration folder -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>


    <string-array name="OfflineCourses">
        <item>Dance</item>
        <item>Music</item>
        <item>Drawing</item>
        <item>Hindi</item>
        <item>Spoken English</item>
        <item>Swimming</item>
        <item>Sketting</item>
        <item>Abacus</item>
        <item>Computer Learing</item>
        <item>Bank Couching</item>
        <item>yoga</item>
        <item>Driving</item>
        <item>Zim</item>
    </string-array>

    <string-array name="OnlineCourses">
        <item>Java</item>
        <item>Bank</item>
        <item> C Programming</item>
        <item>English</item>
        <item>PHP</item>
        <item>C++ language</item>
        <item>SQL</item>
    </string-array>



    <string name="splash_text">Glarimy Welcomes You</string>
    <string name="erroroop">OOP!</string>
    <string name="passmessage">SUPER</string>
    <string name="passmessage1">You are rocking!</string>
    <string name="score">Current Score</string>
    <string name="quiz">QUIZ</string>
    <string name="glarimy">SummerPortal</string>
    <string name="get_score">Score</string>
    <string name="scorepage">0</string>
    <string name="copyright">2018, Glarimy Technology Services</string>
    <string name="connectionproblem">Connection Problem \n Check your internet Connection </string>
    <string name="welcome_message">welcome</string>
    <string name="wrongmessage">SORRY</string>
    <string name="wrong">Wrong Answer</string>

</resources>
