<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/BackgroundColor"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="180dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:id="@+id/currentScoreId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="59dp"
            android:gravity="center"
            android:text="@string/scorepage"
            android:textColor="@color/colorAccent"
            android:textSize="130sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/currentScoreId"
            android:layout_centerHorizontal="true"
            android:text="@string/score"
            android:textColor="@color/passmessage"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="@string/glarimy"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAqua"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="QUIZ"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAqua"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
